Quick revision to add German characters
Per suggestion of Reddit user Tyviebrock.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,24 @@
 			<tr>                
 				<td class="key" onclick="typeChar('Y');">O</td>
 				<td class="key" onclick="typeChar('Z');">O</td>
-				<td class="key" onclick="clearNotepad();">⌫</td>
+				<td class="key" onclick="typeChar('𝐴');">O</td>
+			</tr>
+		</table>
+		<table class="keypad">
+			<tr>
+				<td class="key" onclick="typeChar('Ä');">&bullet;</td>
+				<td class="key" onclick="typeChar('Ö');">&bullet;</td>
+				<td class="key" onclick="typeChar('Ü');">&bullet;</td>
+			</tr>               
+			<tr>                
+				<td class="key" onclick="typeChar('');"></td>
+				<td class="key" onclick="typeChar('');"></td>
+				<td class="key" onclick="typeChar('');"></td>
+			</tr>               
+			<tr>                
+				<td class="key" onclick="clearNotepad();">	<small>␡</small></td>
+				<td class="key" onclick="typeChar(' ');">	<small>␠</small></td>
+				<td class="key" onclick="typeChar();">		<small>␈</small></td>
 			</tr>
 		</table>
 	</div>
